--- a/Token-iOS/Base.lproj/Main.storyboard
+++ b/Token-iOS/Base.lproj/Main.storyboard
@@ -352,7 +352,47 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CXA-TZ-AwO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-550" y="339"/>
+            <point key="canvasLocation" x="-796" y="200"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="G7f-ZW-fhW">
+            <objects>
+                <viewController id="S2Y-7x-LxG" customClass="ProfileViewController" customModule="Token" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5x2-Pj-hgh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="barca_bunkers_view" translatesAutoresizingMaskIntoConstraints="NO" id="2bg-f0-UVr">
+                                <rect key="frame" x="0.0" y="64" width="375" height="251"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ib2-rq-XVk">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Profile" id="hZd-vo-DjM"/>
+                                </items>
+                            </navigationBar>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pj" translatesAutoresizingMaskIntoConstraints="NO" id="Rel-dN-RhV">
+                                <rect key="frame" x="110" y="230" width="155" height="163"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3pZ-Y0-vTT">
+                                <rect key="frame" x="0.0" y="401" width="375" height="266"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ado-SG-4nz"/>
+                    </view>
+                    <connections>
+                        <segue destination="YuE-zn-TSa" kind="presentation" identifier="goLeft" modalTransitionStyle="crossDissolve" id="OPj-iJ-kmP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qig-ja-xIx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="526" y="199"/>
         </scene>
         <!--Token Camera View Controller-->
         <scene sceneID="AbO-bm-1pZ">
@@ -382,6 +422,14 @@
                                             <segue destination="Cov-4R-B2Q" kind="presentation" identifier="toFeedViewController" modalTransitionStyle="crossDissolve" id="MRJ-cy-a9U"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L0M-oO-24w">
+                                        <rect key="frame" x="290" y="588" width="77" height="69"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button" image="Jar"/>
+                                        <connections>
+                                            <segue destination="S2Y-7x-LxG" kind="presentation" identifier="toProfileViewContrroller" modalTransitionStyle="crossDissolve" id="UJm-so-cz9"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
@@ -394,8 +442,8 @@
                                     <action selector="recordButtonPressed:" destination="YuE-zn-TSa" eventType="touchUpInside" id="MQL-mB-pXG"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rzp-47-Pup">
-                                <rect key="frame" x="315" y="40" width="30" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rzp-47-Pup">
+                                <rect key="frame" x="315" y="43" width="30" height="30"/>
                                 <state key="normal" image="cameraIcon"/>
                                 <connections>
                                     <action selector="changeCameraPressed:" destination="YuE-zn-TSa" eventType="touchUpInside" id="TKP-Dk-yH8"/>
@@ -422,6 +470,7 @@
                         <segue destination="g02-2n-xWj" kind="presentation" identifier="ToLoginScreen" id="YMc-6c-TYS"/>
                         <segue destination="yPB-KM-7nL" kind="presentation" identifier="UsersVC" id="W2u-iu-KVa"/>
                         <segue destination="Cov-4R-B2Q" kind="presentation" identifier="goLeft" modalTransitionStyle="crossDissolve" id="7U1-XP-0G3"/>
+                        <segue destination="S2Y-7x-LxG" kind="presentation" identifier="goRight" modalTransitionStyle="crossDissolve" id="Bjb-zR-xL0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Agy-d9-ff5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -579,7 +628,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VzM-4G-U6j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1180" y="238"/>
+            <point key="canvasLocation" x="1681" y="152"/>
         </scene>
     </scenes>
     <resources>
@@ -588,17 +637,22 @@
         <image name="DepthON" width="150" height="150"/>
         <image name="Feed Icon-2" width="1201" height="1200"/>
         <image name="FlipCamera" width="150" height="150"/>
+        <image name="Jar" width="864" height="864"/>
         <image name="LOGO ALL TEAL" width="5629" height="1766"/>
         <image name="LivePhotoON" width="150" height="150"/>
         <image name="MovieSelector" width="72" height="72"/>
         <image name="PhotoSelector" width="72" height="72"/>
         <image name="PortraitMatteON" width="150" height="150"/>
+        <image name="barca_bunkers_view" width="1083" height="726"/>
         <image name="cameraIcon" width="30" height="30"/>
         <image name="createSnapButton" width="30" height="30"/>
         <image name="downloadSnapButton" width="23" height="23"/>
+        <image name="pj" width="155" height="163"/>
         <image name="sendSnapButton" width="23" height="23"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Wpb-0U-14Y"/>
+        <segue reference="UJm-so-cz9"/>
         <segue reference="7U1-XP-0G3"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
