--- a/Storyboards/Start.storyboard
+++ b/Storyboards/Start.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rMk-m0-F8U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="apr-dy-AOC">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -43,7 +43,6 @@
         <!--Create Trip View Controller-->
         <scene sceneID="0sN-1V-fUf">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WJt-fs-pkL" userLabel="First Responder" colorLabel="IBBuiltInLabel-Yellow" sceneMemberID="firstResponder"/>
                 <viewController id="apr-dy-AOC" customClass="CreateTripViewController" customModule="Token" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mA9-Fa-rqt">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -66,6 +65,7 @@
                         <viewLayoutGuide key="safeArea" id="NLx-Hx-4Nd"/>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WJt-fs-pkL" userLabel="First Responder" colorLabel="IBBuiltInLabel-Yellow" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="941" y="133"/>
         </scene>
